# loupe

./: ARCH.md  Cargo.toml  README.md
contrib/: config.toml  worker-config.toml
contrib/docker/: README.md  deploy-worker.sh  loupe-container-entrypoint.sh  run-worker-container.sh
crates/loupe-cli/: Cargo.toml
crates/loupe-cli/src/: main.rs  render.rs
crates/loupe-core/src/: finding.rs  lib.rs  state_machine.rs  verdict.rs
crates/loupe-proto/: Cargo.toml
crates/loupe-proto/src/: findings_admin.rs  job_io.rs  lease.rs  lib.rs  registry.rs  scan.rs  version.rs
crates/loupe-server/: Cargo.toml
crates/loupe-server/src/: background.rs  config.rs  lib.rs  main.rs  router.rs  state.rs  tls.rs
crates/loupe-server/src/reporters/: email.rs  github.rs  mod.rs
crates/loupe-server/src/routes/: findings_admin.rs  health.rs  jobs.rs  repos.rs
crates/loupe-server/tests/: approval_flow.rs  dispatch.rs  email_dispatch.rs  health.rs  jobs.rs  llm_dispatch.rs  repos.rs  verify_flow.rs
crates/loupe-storage/: Cargo.toml
crates/loupe-storage/src/: db.rs  findings.rs  jobs.rs  lib.rs  migrations.rs  repos.rs
crates/loupe-tls/src/: provider.rs
crates/loupe-tui/: Cargo.toml
crates/loupe-worker/src/: client.rs  config.rs  lib.rs  main.rs  mcp.rs  repo_cache.rs  runner.rs  sandbox.rs  scanner.rs  source_discovery.rs
crates/loupe-worker/src/llm/: claude_cli.rs  codex_cli.rs  mcp.rs  mod.rs  prompts.rs
crates/loupe-worker/src/scanners/: llm_code_review.rs  llm_verifier.rs  mod.rs  regex_secrets.rs
crates/loupe-worker/tests/: end_to_end.rs
