[package]
name = "loupe-proto"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wire protocol DTOs shared between loupe-server, loupe-worker, and loupe-cli."
publish = false

[dependencies]
loupe-core = { path = "../loupe-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
